--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ pipline:
   name: 'rec_sys_imdb'
 
 train_args:
-  epochs: 1 #100000
+  epochs: 20
   steps: 100
   label_key: 'My Rate'
   features_key:
@@ -20,6 +20,4 @@ train_args:
   FLOAT_FEATURE:
     - "IMDb_Rating"
     - "My Rate"
-  early_stp_patience: 500
-
-
+  early_stp_patience: 5
